--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,15 @@
 		</plugins>
 	</build>
 	<distributionManagement>
+    <!-- <repository>
+      <id>brzy-nexus</id>
+      <name>Nexus Staging Repo</name>
+      <url>http://repo.brzy.org/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>brzy-nexus-snapshot</id>
+      <url>http://repo.brzy.org/content/repositories/snapshots</url>
+    </snapshotRepository> -->
 		<repository>
 			<id>shorrockin.repository</id>
 			<name>Shorrockin Release Repo</name>
@@ -141,12 +150,29 @@
 			<artifactId>scala-library</artifactId>
 			<version>${scala.version}</version>
 		</dependency>
+		<!-- 
+			mvn deploy:deploy-file\
+			 -DgroupId=org.apache.thrift\
+			 -DartifactId=libthrift\
+			 -Dversion=0.5\
+			 -DrepositoryId=brzy-nexus\
+			 -Dpackaging=jar\
+			 -Dfile=lib/libthrift-0.5.jar\
+			 -Durl=http://repo.brzy.org/content/repositories/releases
+
+			mvn deploy:deploy-file\
+			 -DgroupId=org.apache.cassandra\
+			 -DartifactId=cassandra\
+			 -Dversion=0.7.0-beta3\
+			 -DrepositoryId=brzy-nexus\
+			 -Dpackaging=jar\
+			 -Dfile=lib/apache-cassandra-0.7.0-beta3.jar\
+			 -Durl=http://repo.brzy.org/content/repositories/releases
+			 -->
 		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
 			<version>0.5</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/libthrift-0.5.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.eaio.uuid</groupId>
@@ -156,49 +182,43 @@
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
 			<artifactId>cassandra</artifactId>
-			<version>0.7.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/apache-cassandra-0.7.0-beta3.jar</systemPath>
+			<version>0.7.0-beta3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.5.8</version>
+			<version>1.6.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.8</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
 			<optional>true</optional>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-pool</groupId>
 			<artifactId>commons-pool</artifactId>
 			<version>1.5.4</version>
 		</dependency>
+		
+		
 		<!-- test scoped dependencies below -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.6</version>
+			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.4</version>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.2</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -208,29 +228,67 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.google.clhm</groupId>
-			<artifactId>clhm-production</artifactId>
-			<version>1.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.collections</groupId>
-			<artifactId>google-collections</artifactId>
-			<version>1.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>flexjson</groupId>
-			<artifactId>flexjson</artifactId>
-			<version>1.7</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>high-scale-lib</groupId>
-			<artifactId>high-scale-lib</artifactId>
-			<version>1.0</version>
-			<scope>test</scope>
-		</dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.4</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.2</version>
+				<scope>test</scope>
+			</dependency>
+			<!-- <dependency>
+				<groupId>com.google.clhm</groupId>
+				<artifactId>clhm-production</artifactId>
+				<version>1.0</version>
+				<scope>test</scope>
+			</dependency> 
+			<dependency>
+				<groupId>com.google.collections</groupId>
+				<artifactId>google-collections</artifactId>
+				<version>1.0</version>
+				<scope>test</scope>
+			</dependency> -->
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>r07</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>flexjson</groupId>
+				<artifactId>flexjson</artifactId>
+				<version>1.7</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>high-scale-lib</groupId>
+				<artifactId>high-scale-lib</artifactId>
+				<version>1.0</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+	      <groupId>com.reardencommerce</groupId>
+	      <artifactId>clhm</artifactId>
+	      <version>UNKNOWN</version>
+	      <scope>system</scope>
+	      <systemPath>${basedir}/lib/clhm-production.jar</systemPath>
+	    </dependency>
+			<dependency>
+	      <groupId>org.apcahe.avro</groupId>
+	      <artifactId>avro</artifactId>
+	      <version>UNKNOWN</version>
+	      <scope>system</scope>
+	      <systemPath>${basedir}/lib/avro-1.4.0-fixes.jar</systemPath>
+	    </dependency>
+			<dependency>
+	      <groupId>org.mortbay.jetty</groupId>
+	      <artifactId>jetty-java5-threadpool</artifactId>
+	      <version>6.1.26</version>
+	      <scope>test</scope>
+	    </dependency>
 	</dependencies>
 </project>
 
