--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,12 @@
 	      <version>6.1.26</version>
 	      <scope>test</scope>
 	    </dependency>
+      <dependency>
+	      <groupId>org.brzy.fab</groupId>
+	      <artifactId>fab-util</artifactId>
+	      <version>0.4-SNAPSHOT</version>
+	      <!--<scope>test</scope>-->
+	    </dependency>
 	</dependencies>
 </project>
 
